Implementing JAVA class loading